Fixes COMETD-275 (Update load generators to support websocket).