@@ -10,83 +10,6 @@
     <artifactId>cometd-java-client</artifactId>
     <name>CometD :: Java :: Bayeux Client</name>
 
-    <profiles>
-        <profile>
-            <id>server</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-showversion</argument>
-                                <argument>-Xmx512m</argument>
-                                <argument>-Xms512m</argument>
-                                <argument>-Xmn256m</argument>
-                                <argument>-XX:+PrintCommandLineFlags</argument>
-                                <argument>-verbose:gc</argument>
-                                <!--<argument>-XX:+PrintGCDetails</argument>-->
-                                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
-                                <argument>-XX:+UseParallelOldGC</argument>
-                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
-                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
-                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
-                                <!--<argument>-XX:+UseG1GC</argument>-->
-                                <argument>-cp</argument>
-                                <classpath />
-                                <argument>org.cometd.client.benchmark.BayeuxLoadServer</argument>
-                            </arguments>
-                            <classpathScope>test</classpathScope>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>client</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-showversion</argument>
-                                <argument>-Xmx512m</argument>
-                                <argument>-Xms512m</argument>
-                                <argument>-Xmn256m</argument>
-                                <argument>-XX:+PrintCommandLineFlags</argument>
-                                <argument>-verbose:gc</argument>
-                                <!--<argument>-XX:+PrintGCDetails</argument>-->
-                                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
-                                <argument>-XX:+UseParallelOldGC</argument>
-                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
-                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
-                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
-                                <!--<argument>-XX:+UseG1GC</argument>-->
-                                <argument>-cp</argument>
-                                <classpath />
-                                <argument>org.cometd.client.benchmark.BayeuxLoadClient</argument>
-                            </arguments>
-                            <classpathScope>test</classpathScope>
-<!--
-                            <systemProperties>
-                                <systemProperty>
-                                    <key>org.eclipse.jetty.util.log.DEBUG</key>
-                                    <value>true</value>
-                                </systemProperty>
-                            </systemProperties>
--->
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <dependencies>
         <dependency>
             <groupId>org.cometd.java</groupId>
